[package]
name = "rq"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ariadne = "0.4.0"
chumsky = "0.9.3"
lazy_static = "1.4.0"
ordered-float = "4.2.0"
serde_json = "1.0.111"
thiserror = "1.0.56"
