cargo-features = ["codegen-backend"]
[package]
name = "rq"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ariadne = "0.4.0"
chumsky = { git = "https://github.com/zesterer/chumsky", version = "1.0.0-alpha.6" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false

[profile.dev]
debug = 0
codegen-backend = "cranelift"
