cargo-features = ["codegen-backend"]
[package]
name = "rq"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
ariadne = "0.5.1"
chumsky = "0.10.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false

[profile.dev]
debug = 0
codegen-backend = "cranelift"
